--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask==3.0.3
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lxml==5.3.0
 MarkupSafe==3.0.2
 pydantic==2.9.2
 pydantic_core==2.23.4
