--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
 annotated-types==0.7.0
+attrs==24.2.0
 blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -6,16 +10,25 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.7.0
 email_validator==2.2.0
+fhir==0.0.4
 fhir.resources==7.1.0
+fhirpy==2.0.14
 Flask==3.0.3
+frozenlist==1.5.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 lxml==5.3.0
 MarkupSafe==3.0.2
+multidict==6.1.0
+propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+pytz==2024.2
 requests==2.32.3
+style==1.1.0
 typing_extensions==4.12.2
+update==0.0.1
 urllib3==2.2.3
 Werkzeug==3.0.4
+yarl==1.17.1
