--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ fhir.resources==7.1.0
 fhirpy==2.0.14
 Flask==3.0.3
 frozenlist==1.5.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 lxml==5.3.0
 MarkupSafe==3.0.2
 multidict==6.1.0
+packaging==24.1
 propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
