--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ packaging==24.1
 propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 style==1.1.0
